# learn-common-words

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  index.html  package.json  styles.css
backend/: Pipfile  serverless.yaml
backend/resources/: german_words.csv
backend/src/service/: api.py  load_data.py
frontend/: .env.development  .env.production  package.json
frontend/public/: index.html  manifest.json
frontend/src/: types.ts
frontend/src/components/App/: App.tsx
frontend/src/components/App/__snapshots__/: App.test.tsx.snap
frontend/src/components/Banner/: Banner.test.tsx  Banner.tsx
frontend/src/components/Banner/__snapshots__/: Banner.test.tsx.snap
frontend/src/components/Footer/: Footer.tsx
frontend/src/components/Game/: Game.tsx
frontend/src/components/ProgressMeter/: ProgressMeter.tsx
frontend/src/helpers/: callApi.ts
pipelines/: buildspec.ci.yaml  ci.sh  test.sh
scss/: dropdown.scss  index.scss  option_button.scss  progress_bar.scss  selection_button.scss
src/: components.rs  helpers.rs  main.rs
src/components/: app.rs  dropdown.rs  game.rs  language_dropdown.rs  language_select.rs  progress_bar.rs
src/helpers/: random.rs  word_list.rs  words.rs
terraform/: dynamo-db.tf  s3.tf  variables.tf
terraform/environments/development/: backend.conf  terraform.tfvars
terraform/environments/production/: backend.conf  terraform.tfvars
